--- a/htmllayout.css
+++ b/htmllayout.css
@@ -45,6 +45,10 @@ aside a{
   color: #f2f2f2;
 }
 
+aside a.current{
+  background-color: #1d93e2;
+  color: white;
+}
 
 aside table:hover td:hover, a:hover {
   background-color: #ddd;
