--- a/htmllayout.css
+++ b/htmllayout.css
@@ -90,7 +90,7 @@ nav p {
 }
 
 nav a:hover {
-  background-color: #1f1f42;
+  background-color: #181856;
   text-decoration: underline;
   color: white;
 }
@@ -104,7 +104,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #f1f1f1;
+  background-color: #c5cbe3;
   padding: 10px;
 }
 
