--- a/htmllayout.css
+++ b/htmllayout.css
@@ -47,6 +47,7 @@ aside a{
 
 aside p{
   color: white;
+  text-decoration-color: white;
 }
 
 aside td.current{
@@ -54,7 +55,7 @@ aside td.current{
   color: white;
 }
 
-aside a:hover ~ td, table{
+aside td:hover, table:hover ~ a{
   background-color: #ddd;
   text-decoration: underline;
   color: black;
