--- a/modal.css
+++ b/modal.css
@@ -12,13 +12,14 @@
 
 .modal{
 	position: fixed;
+	overflow: auto;
 	z-index: 2;
-  top: 50%;
-  left: 50%;
-  width:40em;
-  height:20em;
-  margin-top: -10em;
-  margin-left: -20em;
-  border: 1px solid #ccc;
-  background-color: #f3f3f3;
+  	top: 50%;
+  	left: 50%;
+  	width:40em;
+  	height:20em;
+  	margin-top: -10em;
+  	margin-left: -20em;
+  	border: 1px solid #ccc;
+  	background-color: #f3f3f3;
 }
