--- a/htmllayout.css
+++ b/htmllayout.css
@@ -8,7 +8,7 @@ body {
 
 header {
   background-color: #18121E;
-  padding: 30px;
+  padding: 50px 30px;
   text-align: center;
   font-size: 30px;
   color: white;
@@ -18,13 +18,14 @@ h2{
   font-style: underline;
 }
 
-/* Container for flexboxes */
 section {
+  margin-top: 20px;
   display: -webkit-flex;
   display: flex;
 }
 
 aside {
+  margin-top: 20px;
   padding-right: 10px;
   padding-bottom: 300px;
   text-align: center;
@@ -70,6 +71,9 @@ pre.codeSample {
 }
 
 nav {
+  position: fixed;
+  top:0;
+  width: 100%;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
