--- a/htmllayout.css
+++ b/htmllayout.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html{
+  width: 100%;
+}
+
 body {
   font-family: Verdana, Arial, Helvetica, sans-serif;
 }
@@ -19,13 +23,11 @@ h2{
 }
 
 section {
-  margin-top: 20px;
   display: -webkit-flex;
   display: flex;
 }
 
 aside {
-  margin-top: 20px;
   padding-right: 10px;
   padding-bottom: 300px;
   text-align: center;
@@ -87,7 +89,7 @@ nav a{
   float: none;
   color: #f2f2f2;
   text-align: center;
-  padding: 10px 10px;
+  padding: 10px;
   text-decoration: none;
   border-radius: 8px;
   font-size: 15px;
