--- a/htmllayout.css
+++ b/htmllayout.css
@@ -71,6 +71,7 @@ aside td:hover{
 pre.codeSample {
   font-family:monospace,monospace;
   font-size:1em;
+  white-space: pre-wrap;
   background-color: #000;
   color: #FFF;
 }
