--- a/htmllayout.css
+++ b/htmllayout.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Verdana, Arial, Helvetica, sans-serif;
+  background-color: #233237;
 }
 
 header {
@@ -118,6 +119,7 @@ nav a.current {
 }
 
 article {
+  border-radius: 8px;
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
@@ -126,7 +128,7 @@ article {
 }
 
 footer {
-  background-color: #f2f2f2;
+  background-color: #233237;
   padding: 10px;
   text-align: center;
   color: white;
