--- a/htmllayout.css
+++ b/htmllayout.css
@@ -52,6 +52,10 @@ aside table, td{
 
 aside a{
   color: #f2f2f2;
+  display: inline-block;
+  display: block;
+  width:100%;
+  height:100%;
 }
 
 aside p{
