--- a/htmllayout.css
+++ b/htmllayout.css
@@ -20,6 +20,7 @@ header {
   text-align: center;
   font-size: 30px;
   color: white;
+
 }
 
 h2{
@@ -31,18 +32,20 @@ section {
   display: flex;
 }
 
-aside {
-  padding-right: 10px;
-  padding-bottom: 300px;
+aside{
+  white-space: nowrap;
+  width:250px;
+  padding: 0px 5px;
   text-align: center;
   background-color: #233237;
+  -webkit-transition: width 0.25s;
+  transition: width 0.25s;
 }
 
 aside table, td{
   background-color: #233237;
   float: none;
   text-align: center;
-  padding: 10px 5px;
   text-decoration: none;
   font-size: 15px;
   overflow: hidden;
@@ -52,6 +55,9 @@ aside table, td{
 
 aside a{
   color: #f2f2f2;
+  display: inline-block;
+  display: block;
+  padding: 10px 5px;
 }
 
 aside p{
@@ -78,6 +84,13 @@ pre.codeSample {
   border-radius: 4px;
 }
 
+iframe.answers{
+  display: none;
+  border: none;
+  width:100%;
+  height: 500px;
+}
+
 nav {
   position: fixed;
   top:0;
@@ -86,8 +99,25 @@ nav {
   -ms-flex: 1;
   flex: 1;
   background: #18121E;
-  padding: 20px;
+  padding:  20px 5px;
   display: block;
+  opacity: 1;
+  -webkit-transition: opacity 0.25s;
+  transition: opacity 0.25s;
+}
+
+nav:hover{
+  opacity:1 !important;
+}
+
+nav button.menubutton{
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background: url(menu.png);
+  background-size: contain;
+  padding:10px;
 }
 
 nav a{
@@ -119,12 +149,17 @@ nav a.current {
 }
 
 article {
+  background-position: center;
+  background-size: cover;
   border-radius: 8px;
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
   background-color: #c5cbe3;
   padding: 10px;
+  background-image: url(background.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 footer {
