--- a/modal.css
+++ b/modal.css
@@ -11,15 +11,12 @@
 }
 
 .modal{
-	position: fixed;
+	position: relative;
 	overflow: auto;
 	z-index: 2;
-  	top: 50%;
-  	left: 50%;
-  	width:40em;
-  	height:20em;
-  	margin-top: -10em;
-  	margin-left: -20em;
-  	border: 1px solid #ccc;
-  	background-color: #f3f3f3;
+  width: 75%;
+  height: 100%;
+  margin: auto; 
+  border: 1px solid #ccc;
+  background-color: #f3f3f3;
 }
