--- a/htmllayout.css
+++ b/htmllayout.css
@@ -85,7 +85,7 @@ pre.interactive{
   font-size:1em;
   white-space: pre-wrap;
   background-color: #FFF;
-  color: #FFF;
+  color: #000;
   border:2px solid Black;
 }
 
