--- a/htmllayout.css
+++ b/htmllayout.css
@@ -14,6 +14,14 @@ body {
   background-color: #233237;
 }
 
+article h1{
+  font-size: 20px;
+}
+
+article h2{
+  font-size: 15px;
+}
+
 header {
   background-color: #18121E;
   padding: 50px 30px;
